src/objects/EventApi__Event__c.object
<CustomObject>
    <description>Primary configuration object for all events.</description>
    <fields>
        <fullName>EventApi__Agenda_HTML__c</fullName>
        <description>Text appears at the top of the &quot;Agenda&quot; page.</description>
        <inlineHelpText>Text appears at the top of the &quot;Agenda&quot; page.</inlineHelpText>
        <label>Agenda HTML</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EventApi__Agenda_Instructions_HTML__c</fullName>
        <description>The text that appears at the top of the &quot;Agenda&quot; page during registration.</description>
        <inlineHelpText>The text that appears at the top of the &quot;Agenda&quot; page during registration.</inlineHelpText>
        <label>Agenda Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EventApi__Attendee_Selection_Instructions_HTML__c</fullName>
        <description>The text that at the top of the &quot;Attendee Selection&quot; page during registration.</description>
        <inlineHelpText>The text that appears at the top of the &quot;Attendee Selection&quot; page during registration.</inlineHelpText>
        <label>Attendee Selection Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EventApi__Attendees__c</fullName>
        <defaultValue>0</defaultValue>
        <description>** System Calculated ** The current number of registered attendees for your event.</description>
        <inlineHelpText>** System Calculated ** The current number of registered attendees for your event.</inlineHelpText>
        <label>Number of Registered Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Auto_Sellout_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, system will update Sold Out field automatically when number of registered attendees have reached to event capacity.</description>
        <inlineHelpText>When checked, system will update Sold Out field automatically when number of registered attendees have reached to event capacity.</inlineHelpText>
        <label>Auto Sellout Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Body_Background_Color__c</fullName>
        <defaultValue>&quot;#FFFFFF&quot;</defaultValue>
        <description>The overall background of the related event. Valid hexadecimal notation required.</description>
        <inlineHelpText>The overall background of the related event. Valid hexadecimal notation required.</inlineHelpText>
        <label>Body Background Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Business_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Required Override ** Link to related Business Group. Derived from User Preferences if not defined on record creation.</description>
        <inlineHelpText>** System Calculated Required Override ** Link to related Business Group. Derived from User Preferences if not defined on record creation.</inlineHelpText>
        <label>Business Group</label>
        <referenceTo>OrderApi__Business_Group__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Calendar_Reminder_Text__c</fullName>
        <description>Replaces Event: Description. When the customer clicks an &quot;Add to Calendar&quot; link on the event, this text is the body of the calendar item. By default, the Event Name, Start Time, End Time, and Venue information are included.</description>
        <inlineHelpText>Replaces Event: Description. When the customer clicks an &quot;Add to Calendar&quot; link on the event, this text is the body of the calendar item. By default, the Event Name, Start Time, End Time, and Venue information are included.</inlineHelpText>
        <label>Calendar Reminder Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EventApi__Capacity__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Maximum number of tickets that can be sold for the event. Required if &quot;Enable Waitlisting&quot; is checked.</description>
        <inlineHelpText>Maximum number of tickets that can be sold for the event. Required if &quot;Enable Waitlisting&quot; is checked.</inlineHelpText>
        <label>Ticket Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Chatter_Group_Ids__c</fullName>
        <description>This field defines the chatter group ids that can view this event in the community.</description>
        <inlineHelpText>This field defines the chatter group ids that can view this event in the community.</inlineHelpText>
        <label>Chatter Group Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventApi__Community_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Community group that this event is linked to. The event will display on the group detail page.</description>
        <inlineHelpText>Community group that this event is linked to. The event will display on the group detail page.</inlineHelpText>
        <label>Community Group</label>
        <referenceTo>PagesApi__Community_Group__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Contact_Search_Result_Fields_CSV__c</fullName>
        <description>Result fields will be displayed when contact searching for attendees.</description>
        <inlineHelpText>Result fields will be displayed when contact searching for attendees.</inlineHelpText>
        <label>Contact Search Result Fields CSV</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventApi__Create_Contacts_for_Attendees__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables contact creation for that event. If &quot;Enable Account Search&quot; is not checked, contacts created will be added to the primary registrant&apos;s account or into an individual person account depending on if the &quot;Enable Individual Accounts&quot; setting is active.</description>
        <inlineHelpText>Enables contact creation for that event. If &quot;Enable Account Search&quot; is not checked, contacts created will be added to the primary registrant&apos;s account or into an individual person account depending on if the &quot;Enable Individual Accounts&quot; setting is active.</inlineHelpText>
        <label>Create Contacts for Attendees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Custom_CSS__c</fullName>
        <description>Custom CSS is inserted before the closing html head (&quot;&lt;/head&gt;&quot;) tag into pages using this Theme.</description>
        <inlineHelpText>Custom CSS is inserted before the closing html head (&quot;&lt;/head&gt;&quot;) tag into pages using this Theme.</inlineHelpText>
        <label>Custom CSS</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventApi__Description__c</fullName>
        <description>Optional event description.</description>
        <inlineHelpText>Optional event description.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventApi__Disable_Attendee_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By checking this field, the user will bypass the need to insert attendee names. This means all attendee records will have the name of the purchaser.</description>
        <inlineHelpText>By checking this field, the user will bypass the need to insert attendee names. This means all attendee records will have the name of the purchaser.</inlineHelpText>
        <label>Disable Attendee Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Display_Name__c</fullName>
        <description>Event name as you would like it to appear on registration pages, calendar reminders, and emails.</description>
        <inlineHelpText>Event name as you would like it to appear on registration pages, calendar reminders, and emails.</inlineHelpText>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__ETicket_Label_Color__c</fullName>
        <description>The color of the text for the mobile e-ticket. This color will be used for the headings in each section of the e-ticket. Required format is #000000.</description>
        <inlineHelpText>The color of the text for the mobile e-ticket. This color will be used for the headings in each section of the e-ticket. Required format is #000000.</inlineHelpText>
        <label>ETicket Label Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__ETicket_Value_Color__c</fullName>
        <description>The color of the value fields for the mobile e-ticket. This color will be used for the values in each section of the e-ticket. Required format is #000000.</description>
        <inlineHelpText>The color of the value fields for the mobile e-ticket. This color will be used for the values in each section of the e-ticket. Required format is #000000.</inlineHelpText>
        <label>ETicket Value Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Email_Notification_Text__c</fullName>
        <description>Replaces Event: Description. When attendees are registered by proxy, they receive an email notification about the event. This text is the body of that email. By default, the Event Name, Start Time, End Time, and Venue information are included.</description>
        <inlineHelpText>Replaces Event: Description. When attendees are registered by proxy, they receive an email notification about the event. This text is the body of that email. By default, the Event Name, Start Time, End Time, and Venue information are included.</inlineHelpText>
        <label>RESERVED</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventApi__Enable_Access_Permissions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, only badge types identified in the &quot;Manage Permissions&quot; related list will have access to this item.</description>
        <inlineHelpText>When checked, only badge types identified in the &quot;Manage Permissions&quot; related list will have access to this item.</inlineHelpText>
        <label>Enable Access Permissions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Enable_Assigned_Seating__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, assigned seating is enabled on the related event.</description>
        <inlineHelpText>When checked, assigned seating is enabled on the related event.</inlineHelpText>
        <label>Enable Assigned Seating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Enable_Contact_Restriction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, a contact cannot have more than one attendee under the event. This will restrict the contact to one registrant for the event.</description>
        <inlineHelpText>When checked, a contact cannot have more than one attendee under the event. This will restrict the contact to one registrant for the event.</inlineHelpText>
        <label>Enable Contact Restriction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Enable_Contact_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, enables the primary registrant to search for contacts in the system. When unchecked, the primary registrant is not allowed to search for any contacts. The default behavior is to search within the primary registrant&apos;s account.</description>
        <inlineHelpText>When checked, enables the primary registrant to search for contacts in the system. When unchecked, the primary registrant is not allowed to search for any contacts. The default behavior is to search within the primary registrant&apos;s account.</inlineHelpText>
        <label>Enable Contact Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Enable_Event_Display_Name_Date_Time__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When unchecked, the Display name and event date and time will not display over the banner image. Defaults checked.</description>
        <inlineHelpText>When unchecked, the Display name and event date and time will not display over the banner image. Defaults checked.</inlineHelpText>
        <label>Enable Event Display Name and Date/Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Enable_QR_Event_Pass__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checking this field will show a QR code on the event pass.</description>
        <inlineHelpText>Checking this field will show a QR code on the event pass.</inlineHelpText>
        <label>Enable QR for Event Pass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Enable_Registration_Groups__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, allows one person to register multiple attendees at the same time and pay for them together.</description>
        <inlineHelpText>When checked, allows one person to register multiple attendees at the same time and pay for them together.</inlineHelpText>
        <label>Enable Registration Groups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Enable_Registration_Updates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow attendees to update their registration from a portal. Defaults unchecked.</description>
        <inlineHelpText>Allow attendees to update their registration from a portal. Defaults unchecked.</inlineHelpText>
        <label>Enable Registration Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Enable_Schedule_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, enables schedule items for event Registration Styles that support them.</description>
        <inlineHelpText>When checked, enables schedule items for event Registration Styles that support them.</inlineHelpText>
        <label>Enable Schedule Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Enable_Sponsors__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, enables sponsor package sales for event Registration Styles that support it.</description>
        <inlineHelpText>When checked, enables sponsor package sales for event Registration Styles that support it.</inlineHelpText>
        <label>Enable Sponsor Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Enable_Waitlist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, attendees will have the option to be added to a waitlist once tickets are sold out.</description>
        <inlineHelpText>When checked, attendees will have the option to be added to a waitlist once tickets are sold out.</inlineHelpText>
        <label>Enable Waitlist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__End_Date_Time__c</fullName>
        <description>**Required** The event end date and time (mm/dd/yyyy hh:mm:ss).</description>
        <inlineHelpText>**Required** The event end date and time (mm/dd/yyyy hh:mm:ss).</inlineHelpText>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EventApi__End_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>**Required** The event end date.</description>
        <inlineHelpText>**Required** The event end date.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EventApi__End_Time__c</fullName>
        <description>**Required** The event end time (HH:MM).</description>
        <inlineHelpText>**Required** The event end time (HH:MM).</inlineHelpText>
        <label>End Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Event_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The event category is a template for creating events that use the same information. Defined fields on the event category will pass down to the event and can be customized as needed.</description>
        <inlineHelpText>The event category is a template for creating events that use the same information. Defined fields on the event category will pass down to the event and can be customized as needed.</inlineHelpText>
        <label>Event Category</label>
        <referenceTo>EventApi__Event_Category__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Event_Key__c</fullName>
        <description>This field is used as a unique identifier for events. The value in this field will also be used to concatenate item class names to be easily identified in lookup searches.</description>
        <inlineHelpText>This field is used as a unique identifier for events. The value in this field will also be used to concatenate item class names to be easily identified in lookup searches.</inlineHelpText>
        <label>Event Key</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EventApi__Event_Pass_Image_URL__c</fullName>
        <description>URL for the image to display on the printable event pass.</description>
        <inlineHelpText>URL for the image to display on the printable event pass.</inlineHelpText>
        <label>Event Pass Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EventApi__Featured_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked this event&apos;s banner will display in the featured events section of the events listing page. If the event does not have a banner image, it cannot be a featured event.</description>
        <inlineHelpText>When checked this event&apos;s banner will display in the featured events section of the events listing page. If the event does not have a banner image, it cannot be a featured event.</inlineHelpText>
        <label>Featured Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Conditionally Required ** Link to the Survey Form built using Fonteva&apos;s Publisher. Required and restricted to Events where &quot;Enable Surveys&quot; is checked.</description>
        <inlineHelpText>** Conditionally Required ** Link to the Survey Form built using Fonteva&apos;s Publisher. Required and restricted to Events where &quot;Enable Surveys&quot; is checked.</inlineHelpText>
        <label>Registration Interview</label>
        <referenceTo>PagesApi__Form__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Group_Manager_HTML__c</fullName>
        <description>The text that appears at the top of the &quot;Group Registration&quot; page.</description>
        <inlineHelpText>Text appears at the top of the &quot;Group Registration&quot; page.</inlineHelpText>
        <label>Group Manager HTML</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EventApi__Guest_Email_Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, guest attendees will not need an email to register.</description>
        <inlineHelpText>When checked, guest attendees will not need an email to register.</inlineHelpText>
        <label>Guest Email Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Guest_Registrant_FieldSet_CSV__c</fullName>
        <description>Custom fieldset defined on the Assignment Object that is used to collect information during guest checkout. Use the API name of the fieldset and ensure that fields on the Assignment object mirror the fields on the Attendee object.</description>
        <inlineHelpText>Custom fieldset defined on the Assignment Object that is used to collect information during guest checkout. Use the API name of the fieldset and ensure that fields on the Assignment object mirror the fields on the Attendee object.</inlineHelpText>
        <label>Guest Registrant Field Sets (CSV)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Heading_Color__c</fullName>
        <defaultValue>&quot;#333333&quot;</defaultValue>
        <description>Color of all heading text in the related event. Valid hexadecimal notation required.</description>
        <inlineHelpText>Color of all heading text in the related event. Valid hexadecimal notation required.</inlineHelpText>
        <label>Heading Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Hero_Button_Background_Color__c</fullName>
        <defaultValue>&quot;#00AAFF&quot;</defaultValue>
        <description>Background color of the related event&apos;s banner button. Valid hexadecimal notation required.</description>
        <inlineHelpText>Background color of the related event&apos;s banner button. Valid hexadecimal notation required.</inlineHelpText>
        <label>Hero Button Background Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Hero_Button_Text_Color__c</fullName>
        <defaultValue>&quot;#FFFFFF&quot;</defaultValue>
        <description>Text color of the related event&apos;s banner button. Valid hexadecimal notation required.</description>
        <inlineHelpText>Text color of the related event&apos;s banner button. Valid hexadecimal notation required.</inlineHelpText>
        <label>Hero Button Text Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Hero_Text_Color__c</fullName>
        <defaultValue>&quot;#FFFFFF&quot;</defaultValue>
        <description>Color used for the related event&apos;s banner text. Valid hexadecimal notation required.</description>
        <inlineHelpText>Color used for the related event&apos;s banner text. Valid hexadecimal notation required.</inlineHelpText>
        <label>Hero Text Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Image_URL__c</fullName>
        <description>Image displays on the event overview and registration pages.</description>
        <inlineHelpText>Image displays on the event overview and registration pages.</inlineHelpText>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EventApi__Individual_Pages__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked all status pages can be configured individually.</description>
        <inlineHelpText>When checked all status pages can be configured individually.</inlineHelpText>
        <label>Individual Pages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Invitation_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the related event&apos;s attendees can only be registered by invitation.</description>
        <inlineHelpText>When checked, the related event&apos;s attendees can only be registered by invitation.</inlineHelpText>
        <label>Invitation Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Event is available for Sale and for publishing too registration pages. Defaults checked.</description>
        <inlineHelpText>When checked, the Event is available for Sale and for publishing the registration pages. Defaults checked.</inlineHelpText>
        <label>SYSTEM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked the event will be closed and no longer available for sale through the api and/or any community that has access to the event.</description>
        <inlineHelpText>When checked the event will be closed and no longer available for sale through the api and/or any community that has access to the event.</inlineHelpText>
        <label>SYSTEM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Published__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Event and related details will be exposed on all supported APIs. Defaults unchecked.</description>
        <inlineHelpText>When checked, the Event and related details will be exposed on all supported APIs. Defaults unchecked.</inlineHelpText>
        <label>SYSTEM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Lightning_Event_Style__c</fullName>
        <description>Generated Styles for Lightning Events.</description>
        <inlineHelpText>Generated Styles for Lightning Events.</inlineHelpText>
        <label>SYSTEM</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventApi__Link_Color__c</fullName>
        <defaultValue>&quot;#FF9900&quot;</defaultValue>
        <description>Color of all text links in the related event. Valid hexadecimal notation required.</description>
        <inlineHelpText>Color of all text links in the related event. Valid hexadecimal notation required.</inlineHelpText>
        <label>Link Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Location_And_Date_Text__c</fullName>
        <description>The value defined in this field will display in the upper right hand side of the navbar overriding the city, state, and date/time.</description>
        <inlineHelpText>The value defined in this field will display in the upper right hand side of the navbar overriding the city, state, and date/time.</inlineHelpText>
        <label>Location and Date Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EventApi__Logo_Image__c</fullName>
        <description>The image defined in this field appears in the lefthand side of the navbar in the microsite.
            Recommended size 90px by 90px. (Image will be cropped to these dimensions)</description>
        <inlineHelpText>The image defined in this field appears in the lefthand side of the navbar in the microsite.
            Recommended size 90px by 90px. (Image will be cropped to these dimensions)</inlineHelpText>
        <label>Logo Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EventApi__Navbar_Background_Color__c</fullName>
        <defaultValue>&quot;#999999&quot;</defaultValue>
        <description>Background color of the related event&apos;s navigation. Valid hexadecimal notation required.</description>
        <inlineHelpText>Background color of the related event&apos;s navigation. Valid hexadecimal notation required.</inlineHelpText>
        <label>Navbar Background Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Navbar_Text_Color__c</fullName>
        <defaultValue>&quot;#FFFFFF&quot;</defaultValue>
        <description>Color of the related event&apos;s navigation text. Valid hexadecimal notation required.</description>
        <inlineHelpText>Color of the related event&apos;s navigation text. Valid hexadecimal notation required.</inlineHelpText>
        <label>Navbar Text Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Overview_HTML__c</fullName>
        <description>Description of the event. Used on the event main page, in calendar reminders, and in emails.</description>
        <inlineHelpText>Description of the event. Used on the event main page, in calendar reminders, and in emails.</inlineHelpText>
        <label>Overview HTML</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EventApi__Primary_Button_Background_Color__c</fullName>
        <defaultValue>&quot;#00AAFF&quot;</defaultValue>
        <description>Background color of all primary buttons in the related event. Valid hexadecimal notation required.</description>
        <inlineHelpText>Background color of all primary buttons in the related event. Valid hexadecimal notation required.</inlineHelpText>
        <label>Primary Button Background Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Primary_Button_Text_Color__c</fullName>
        <defaultValue>&quot;#FFFFFF&quot;</defaultValue>
        <description>Text color of all primary buttons in the related event. Valid hexadecimal notation required.</description>
        <inlineHelpText>Text color of all primary buttons in the related event. Valid hexadecimal notation required.</inlineHelpText>
        <label>Primary Button Text Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Process_Bar_Color__c</fullName>
        <defaultValue>&quot;#FFFFFF&quot;</defaultValue>
        <description>Color of all text in the related event&apos;s registration process bar. Valid hexadecimal notation required.</description>
        <inlineHelpText>Color of all text in the related event&apos;s registration process bar. Valid hexadecimal notation required.</inlineHelpText>
        <label>Process Bar Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Process_Bar_Foreground_Color__c</fullName>
        <defaultValue>&quot;#666666&quot;</defaultValue>
        <description>Foreground color of the related event&apos;s registration process bar. Valid hexadecimal notation required.</description>
        <inlineHelpText>Foreground color of the related event&apos;s registration process bar. Valid hexadecimal notation required.</inlineHelpText>
        <label>Process Bar Foreground Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Quantity_Remaining__c</fullName>
        <description>The capacity / ticket quantity on the event minus the tickets sold.</description>
        <formula>EventApi__Capacity__c - EventApi__Quantity_Sold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The capacity / ticket quantity on the event minus the tickets sold.</inlineHelpText>
        <label>Tickets Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Quantity_Sold__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The sum of all sold tickets of any type.</description>
        <inlineHelpText>The sum of all sold tickets of any type.</inlineHelpText>
        <label>Tickets Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Registration_Instructions__c</fullName>
        <description>Text appears near ticket type selection on event registration page.</description>
        <inlineHelpText>Text appears near ticket type selection on event registration page.</inlineHelpText>
        <label>Registration Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EventApi__Registration_Style__c</fullName>
        <description>Determines which page layouts are used to display the event, as well as the settings available for ticketing and/or registration.</description>
        <inlineHelpText>Determines which page layouts are used to display the event, as well as the settings available for ticketing and/or registration.</inlineHelpText>
        <label>Registration Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Simple</fullName>
                    <default>true</default>
                    <label>Simple</label>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Lightning Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventApi__Registration_Timer__c</fullName>
        <defaultValue>15</defaultValue>
        <description>The time allowed for purchasing an event registration.</description>
        <inlineHelpText>The time allowed for purchasing an event registration.</inlineHelpText>
        <label>Registration Timer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>